--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 layout: default
 title: Homepage
 ---
+
+<p>
+... a collection of ideas and research results that move us a bit closer to super intelligence.
+</p>
+
 <h1>Latest Posts</h1>
 
 <ul>
