--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@ title: Homepage
 ... a collection of ideas and research results that move us a bit closer to super intelligence.
 </p>
 
-<h1>Latest Posts</h1>
+<h1>Blog posts</h1>
 
 <ul>
   {% for post in site.posts %}
     <li>
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      {{ post.excerpt }}
     </li>
   {% endfor %}
 </ul>
