--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 ---
-layout: default
-title: Homepage
+layout: home
 ---
 
-<p>
-... a collection of ideas and research results that move us a bit closer to super intelligence.
-</p>
+<div style="margin: 45px 30px; padding-left: 40px;"> 
+<!-- fix the weird layout -->
 
-<h1>Blog posts</h1>
-
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-    </li>
-  {% endfor %}
-</ul>
+<h1>Blog</h1>
+    ... a collection of ideas and research results that move us a bit closer to super intelligence.    
+</div>
