--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ layout: home
 <div style="margin: 45px 30px; padding-left: 40px;"> 
 <!-- fix the weird layout -->
 
+<h1>About me</h1>
+TBD
+
 <h1>Blog</h1>
-    ... a collection of ideas and research results that move us a bit closer to super intelligence.    
+    ... a collection of ideas and research results that move us a bit closer to true AI.
 </div>
