--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@ layout: home
 <!-- fix the weird layout -->
 
 <h1>About me</h1>
-TBD
+
+As of 2020, I'm a PhD candidate at Vrije Universiteit Amsterdam and a data scientist at Elsevier.
+In my spare time, I study possible routes to artificial general intenlligence (the beneficial kind).
+My most recent interest is learning visual concepts to support common sense reasoning and 
+solving adversarial examples.
 
 <h1>Blog</h1>
-    ... a collection of ideas and research results that move us a bit closer to true AI.
+    A collection of ideas and research results that move us a bit closer to true AI.
 </div>
