--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@ layout: home
 
 <h1>About me</h1>
 
-As of 2020, I'm a PhD candidate at Vrije Universiteit Amsterdam and a data scientist at Elsevier.
-In my spare time, I study possible routes to artificial general intenlligence (the beneficial kind).
+As of 2020, I'm a PhD candidate in natural language processing at Vrije Universiteit Amsterdam 
+and a data scientist at Elsevier, focusing on recommender systems and topic modeling.
+In my spare time, I study possible routes to artificial general intenlligence (the good kind).
 My most recent interest is learning visual concepts to support common sense reasoning and 
 solving adversarial examples.
 
